--- a/app/views/createtopic.scala.html
+++ b/app/views/createtopic.scala.html
@@ -1,9 +1,9 @@
-@(newTopicForm: Form[Topic])
+@(newTopicForm: play.data.Form[Topic])
 
 @import helper._
 
 @main("Test") {
-    @form(routes.Application.createTopic()){
+    @form(routes.Application.createNewTopic()){
         @newtopicfieldset(newTopicForm)
     }
 }
