--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -17,7 +17,7 @@
                 <!--  Display three horizontal lines when navbar collapsed. -->
                 <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">play-example-form</a>
+            <a class="navbar-brand" href="/">Bulletin board</a>
         </div>
     </div>
 </div>
