--- a/app/views/newtopicfieldset.scala.html
+++ b/app/views/newtopicfieldset.scala.html
@@ -3,8 +3,8 @@
 @import bootstrap3._
 
 <fieldset>
-    <div id="legend">
-        New topic
+    <div id="legend" class="page-header">
+        <h1>New topic</h1>
     </div>
 
     @text(topicForm("topicName"),
