--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -17,12 +17,13 @@
                 <!--  Display three horizontal lines when navbar collapsed. -->
                 <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">Bulletin board</a>
+            <a class="navbar-brand" href="/topics">Bulletin board</a>
         </div>
     </div>
 </div>
-
-@content
+<div class = "container theme-showcase">
+    @content
+</div>
 <script src="@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))"></script>
     <script src="@routes.WebJarAssets.at(WebJarAssets.locate("js/bootstrap.min.js"))"></script>
 
