--- a/app/views/topics.scala.html
+++ b/app/views/topics.scala.html
@@ -4,6 +4,7 @@
 
 @main("Topics") {
     @form(routes.Application.newTopic()) {
+
         <button id="newTopicBtn" type="submit" class="btn btn-primary" value="newTopic">Create new topic</button>
 
         <table class="table">
@@ -11,7 +12,7 @@
                 <tr>
                     <th>Topic name</th>
                     <th>Topic subject</th>
-
+                    <th>Created</th>
                 </tr>
             </thead>
 
@@ -19,9 +20,9 @@
 
                 @for(topic <- topicList) {
                     <tr>
-                        <td>@topic.topicName</td>
+                        <td><a href="@{routes.Application.topicPage(topic.topicId)}">@topic.topicName</a></td>
                         <td>@topic.topicSubject</td>
-
+                        <td>@topic.creationDate</td>
                     </tr>
                 }
 
