--- a/app/views/topicPage.scala.html
+++ b/app/views/topicPage.scala.html
@@ -26,7 +26,7 @@
             }
         }
 
-        @form(action = routes.Application.newComment(Long.parseLong(flash().get("topicId")))) {
+        @form(action = routes.Application.newComment(topic.topicId)) {
             <h3>Comment</h3>
             <div align="left">
                 @textarea(newCommentForm("comment"), label = "", help = "")
